# AppToolkit

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  toolkit.schema.json  toolkits.manifest.json  toolkits.schema.json  tools-installation-info.json
.github/workflows/: ci.yml  lint.yml
examples/: install_exe.rs  is_windows_app_install.rs
fixtures/: toolkits.manifest.json
shell/: install.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/installation/: linux.rs  macos.rs  mod.rs  toolkit_manifest.rs  tools_installation_info.rs  windows.rs
src/utils/: command.rs  console_style.rs  download_file.rs  extract_zip.rs  mod.rs
