[package]
name = "toolkit"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
backtrace = "0.3.71"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
futures = "0.3.30"
home = "0.5.9"
indicatif = "0.17.8"
lazy_static = "1.4.0"
path-absolutize = "3.1.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
walkdir = "2.5.0"
winreg = "0.52.0"
